--- a/package.json
+++ b/package.json
@@ -1,45 +1,24 @@
 {
-  "name": "covid",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.2",
-    "cors": "^2.8.5",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.6.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^6.4.3",
-    "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
-    "routes": "^2.1.0",
-    "web-vitals": "^2.1.4"
-  },
+  "name": "shell",
+  "version": "1.0.0",
+  "description": "Boilplate for React and Express",
+  "main": "server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "capstone": "npm start --prefix capstone",
+    "capstone-install": "cd capstone && npm install",
+    "dev": "concurrently \"npm run server\" \"npm run capstone\""
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "author": "Arshee & Just_Q",
+  "license": "ISC",
+  "dependencies": {
+    "concurrently": "^7.6.0",
+    "express": "^4.18.2",
+    "react-icons": "^4.7.1",
+    "request": "^2.88.2"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "proxy": "http://localhost:8080"
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
